# rpg

./: .gitignore  CMakeLists.txt  run.sh
assets/tilemaps/: gynecology.json
assets/tilesets/: map_bin.tilemap
development/: AD_jungle_TileA5.tsx  AD_jungle_TileB(2).tsx  AbomSybHouseA2.tsx  TileA2_exterior.tsx  TileA4.tsx  TileA5_interior.tsx  TileA5_interior_ABOM.tsx  gynecology.tmx  house.tiled-session  macks_A4.tsx  tileb_interior.tsx
include/: camera.h  collusion.h  game.h  helper.h  player.h  tilemap.h
include/ivy/: camera.h  collision.h  game.h  inventory.h  inventory_ui.h  item.h  scenes.h  types.h  utils.h  virtual.h
include/ivy/player/: player.h  player_internal.h  portrait.h
include/ivy/tilemap/: tilemap.h  tilemap_internal.h
src/: camera.c  collision.c  collusion.c  game.c  helper.c  inventory.c  inventory_ui.c  item.c  main.c  player.c  tilemap.c  utils.c  virtual.c
src/player/: player.c  player_internal.c  portrait.c
src/scenes/: scene_gameplay.c  scene_options.c  scene_title.c  scenes.c
src/tilemap/: tilemap.c  tilemap_internal.c
src/tilemap/autotile/: border.c  carpet.c  table.c  wall.c
